--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<footer>
     		<ul>
         		<li><a href="dhuhuang@ucdavis.edu">Email</a></li>
-        		<li><a href="https://github.com/David-Data-Scientist">github.com/David-Data-Scientist</a></li>
+        		<li><a href="https://github.com/David-Data-Scientist">Github</a></li>
 			</ul>
 		</footer>
 	</body>
