--- a/about/index.html
+++ b/about/index.html
@@ -1,15 +1,42 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Hank Quinlan</title>
+    
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  
+  </head>
 
----
-layout: default
-title: About Hank Quinlan
----
 
-		<div class="about">
+  <body>
+    <nav>
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="/about">About</a></li>
+<li><a href="/cv">CV</a></li>
+<li><a href="/blog">Blog</a></li>
+</ul>
+    </nav>
+<div class="container">
+
+  		<div class="about">
 			<h1>About</h1>
 			<p>Thanks for visiting my website! Here is a brief introduction of myself:</p>
-
 			<ul class="contacts">
-				<li><a href="https://www.stat.ucdavis.edu/">Your Departmental Webpage</a></li>
+				<li><a href="https://www.stat.ucdavis.edu/">My Departmental Webpage</a></li>
 				<li><a href="https://www.linkedin.com/in/david-huang-data-scientist/">LinkedIn</a></li>
 				</ul>
 		</div>
+
+
+</div>
+  
+  <footer>
+   <ul>
+   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   </ul>
+  </footer>
+  </body>
+
+</html>
